# windrose-dedicated-server-docker-helm

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dedicated-server.md  index.yaml  pyproject.toml  release-please-config.json  renovate.json
.github/actions/setup-environment/: action.yaml
.github/workflows/: code-quality.yaml  docker-image.yaml  dockerhub-description.yaml  helm-lint.yaml  helm-release.yaml  publish-manual.yaml  publish.yaml  release.yaml  test-image-build.yaml  unit-tests.yaml
charts/valheim/: Chart.yaml  README.md  values.yaml
charts/valheim/templates/: NOTES.txt  configmap.yaml  secret.yaml  services.yaml  statefulset.yaml
charts/windrose/: Chart.yaml  README.md  values.yaml
charts/windrose/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  secret.yaml  services.yaml  statefulset.yaml
examples/docker-compose/: README.md  compose.yaml  windrose-server-update.sh
examples/podman-compose-official-image/: README.md  compose.yaml
examples/podman-compose-remote-builder/: README.md  compose.yaml
tests/: conftest.py  constants.py  test_container.py  test_image_build.py  test_publish.py  test_update_server_description.py  test_utils.py
tests/assets/: ServerDescription.json
