[project]
name = "windrose-dedicated-server-docker-helm"
version = "2.1.0"
description = "Windrose dedicated server - Docker image and Helm chart"
authors = [
    {name = "Max Pfeiffer",email = "max@maxpfeiffer.ch"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "click==8.4.2",
    "python-on-whales==0.81.0",
    "steam[client]==1.4.4",
]

[dependency-groups]
dev = [
    "furl==2.1.4",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
]

[tool.uv]
package = false

[tool.ruff]
src = ["build", "tests"]
extend-exclude = ["charts", "examples"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
# The slow tests build the real container image and run containers, so they
# are deselected by default; run them with: pytest -m slow
addopts = "-m 'not slow'"
markers = [
    "slow: slow tests that build the container image and run containers with Podman",
]
